==> arduino/Arduino/hardware/c2000/libraries/Wire/utility/twi.c <==
#include <math.h>
#include <stdlib.h>
#include "Energia.h" // for digitalWrite
#define cbi(sfr, bit) (_SFR_BYTE(sfr) &= ~_BV(bit))
#define sbi(sfr, bit) (_SFR_BYTE(sfr) |= _BV(bit))
#include "wiring_private.h"
#include "pins_energia.h"
#include "twi.h"
#define SYSCLKOUT F_CPU // Frequency of I2C i/p clk
#define MODCLK    10*10^6 // Frequency of module clk must be between 7-10Mhz, selecting 10Mhz
#define CLKL      100      // Clock high
#define CLKH      100       // clock low

void twi_init(void)
{
  // initialize state
  twi_state = TWI_READY;
  twi_sendStop = true;		// default value
  twi_inRepStart = false;

  twi_masterBufferIndex = 0;
  twi_masterBufferLength = 0;
  twi_txBufferIndex = 0;
  twi_txBufferLength = 0;
  twi_rxBufferIndex = 0;


  EALLOW;

  SysCtrlRegs.PCLKCR0.bit.I2CAENCLK = 1;

  //Register I2C Interrupt Handlers
  PieVectTable.I2CINT1A = twiISR;
  PieVectTable.I2CINT2A = twiFIFOISR;
  PieCtrlRegs.PIEIER8.bit.INTx1 = 1;
  PieCtrlRegs.PIEIER8.bit.INTx2 = 1;
  IER |= 0x0080;

/* Enable internal pull-up for the selected pins */
// Pull-ups can be enabled or disabled disabled by the user.
// This will enable the pullups for the specified pins.
// Comment out other unwanted lines.

   // GpioCtrlRegs.GPAPUD.bit.GPIO28 = 0;    // Enable pull-up for GPIO28 (SDAA)
   // GpioCtrlRegs.GPAPUD.bit.GPIO29 = 0;       // Enable pull-up for GPIO29 (SCLA)

    GpioCtrlRegs.GPBPUD.bit.GPIO32 = 0;    // Enable pull-up for GPIO32 (SDAA)
    GpioCtrlRegs.GPBPUD.bit.GPIO33 = 0;       // Enable pull-up for GPIO33 (SCLA)

/* Set qualification for selected pins to asynch only */
// This will select asynch (no qualification) for the selected pins.
// Comment out other unwanted lines.

    //GpioCtrlRegs.GPAQSEL2.bit.GPIO28 = 3;  // Asynch input GPIO28 (SDAA)
    //GpioCtrlRegs.GPAQSEL2.bit.GPIO29 = 3;  // Asynch input GPIO29 (SCLA)

    GpioCtrlRegs.GPBQSEL1.bit.GPIO32 = 3;  // Asynch input GPIO32 (SDAA)
    GpioCtrlRegs.GPBQSEL1.bit.GPIO33 = 3;  // Asynch input GPIO33 (SCLA)

/* Configure I2C pins using GPIO regs*/
// This specifies which of the possible GPIO pins will be I2C functional pins.
// Comment out other unwanted lines.

   // GpioCtrlRegs.GPAMUX2.bit.GPIO28 = 2;   // Configure GPIO28 for SDAA operation
   // GpioCtrlRegs.GPAMUX2.bit.GPIO29 = 2;   // Configure GPIO29 for SCLA operation

    GpioCtrlRegs.GPBMUX1.bit.GPIO32 = 1;   // Configure GPIO32 for SDAA operation
    GpioCtrlRegs.GPBMUX1.bit.GPIO33 = 1;   // Configure GPIO33 for SCLA operation

    EDIS;


  I2caRegs.I2CMDR.bit.IRS = 0;                     // Reset I2C module 
  I2caRegs.I2CPSC.all = (SYSCLKOUT / MODCLK )- 1;  // Setting the prescalar value
  I2caRegs.I2CCLKL = CLKL;                         // CLOCK LOW
  I2caRegs.I2CCLKH = CLKH;                         // CLOCK HIGH
  I2caRegs.I2CIER.all = 0x24;      // Enable SCD & ARDY interrupts
  I2caRegs.I2CMDR.bit.IRS = 1;                     // Set I2C module  
  I2caRegs.I2CMDR.bit.FREE = 1;

   I2caRegs.I2CFFTX.all = 0x6043;   // Enable TXFIFO, clear TXFFINT, Disable TXFFINT
   I2caRegs.I2CFFRX.all = 0x2061;   // Enable RXFIFO, clear RXFFINT, Enable RXFFINT


}

uint8_t twi_readFrom(uint8_t address, uint8_t* data, uint8_t length, uint8_t sendStop)
{

	uint16_t i;

	// ensure data will fit into buffer
	if(TWI_BUFFER_LENGTH < length){
		return 0;
	}

  // wait until twi is ready, become master reciever
  while(TWI_READY != twi_state){
	continue;
	}

    while(I2caRegs.I2CMDR.bit.STP == 1); // Wait until the I2C bus is not busy

  twi_state = TWI_MRX;
  twi_sendStop = sendStop;
  // reset error state (0xFF.. no error occured)
  twi_error = 0xFF;
	// initialize buffer iteration vars
	twi_masterBufferIndex = 0;
	twi_masterBufferLength = length;

  // build sla+w, slave device address + w bit
  twi_setAddress(address);
  twi_setCount(length);

  if (true == twi_inRepStart) {
    // if we're in the repeated start state, then we've already sent the start,
    // (@@@ we hope), and the TWI statemachine is just waiting for the address byte.
    // We need to remove ourselves from the repeated start state before we enable interrupts,
    // since the ISR is ASYNC, and we could get confused if we hit the ISR before cleaning
    // up. Also, don't enable the START interrupt. There may be one pending from the 
    // repeated start that we sent outselves, and that would really confuse things.
    twi_inRepStart = false;			// remember, we're dealing with an ASYNC ISR
//    TWDR = twi_slarw;
//    TWCR = _BV(TWINT) | _BV(TWEA) | _BV(TWEN) | _BV(TWIE);	// enable INTs, but not START
    //I2caRegs.I2CIER.bit.RRDY = 1;
    I2caRegs.I2CMDR.all = 0x6C20;         // Send restart as master receiver
//    while(twi_masterBufferIndex < twi_masterBufferLength){
//    	while(I2caRegs.I2CSTR.bit.RRDY == 0);
//    	twi_masterBuffer[twi_masterBufferIndex++] = I2caRegs.I2CDRR;
//    }

  }
  else{
    // send start condition
//    TWCR = _BV(TWEN) | _BV(TWIE) | _BV(TWEA) | _BV(TWINT) | _BV(TWSTA);
	  //I2caRegs.I2CIER.bit.RRDY = 1;
      I2caRegs.I2CMDR.all = 0x6C20;         // Send restart as master receiver
//      while(twi_masterBufferIndex < twi_masterBufferLength){
//      	while(I2caRegs.I2CSTR.bit.RRDY == 0);
//      	twi_masterBuffer[twi_masterBufferIndex++] = I2caRegs.I2CDRR;
//      }
  }

//  twi_state = TWI_READY;
//  // wait for read operation to complete
  while((TWI_MRX == twi_state) &&  (twi_masterBufferIndex < length)){
    continue;
  }

  if (twi_masterBufferIndex < length){
    length = twi_masterBufferIndex;
  }

  twi_state = TWI_READY;

  // copy twi buffer to data
	for(i = 0; i < length; ++i){
		data[i] = twi_masterBuffer[i];
	}

	return length;
}

uint8_t twi_writeTo(uint8_t address, uint8_t* data, uint8_t length, uint8_t wait, uint8_t sendStop)
{
	uint8_t i;

  // ensure data will fit into buffer
  if(TWI_BUFFER_LENGTH < length){
    return 1;
	}

  // wait until twi is ready, become master transmitter
  while(TWI_READY != twi_state){
    continue;
	}
  twi_state = TWI_MTX;
  twi_sendStop = sendStop;
  // reset error state (0xFF.. no error occured)
  twi_error = 0xFF;

  // initialize buffer iteration vars
	twi_masterBufferIndex = 0;
	twi_masterBufferLength = length;

  // copy data to twi buffer
	for(i = 0; i < length; ++i){
		twi_masterBuffer[i] = data[i];
	}

  //Set the slave address
  twi_setAddress(address);

  //Set the number of bytes to transmit
  twi_setCount(length);

  //Enable interrupt to begin copying data into the FIFO
  I2caRegs.I2CFFTX.bit.TXFFIENA = 1;
  I2caRegs.I2CFFTX.bit.TXFFINTCLR = 1;


  delay(10);
//  while(1);
//
//  //Load up first byte
//  if(twi_masterBufferIndex < twi_masterBufferLength){
//    // copy data to output register
//    I2caRegs.I2CDXR = twi_masterBuffer[twi_masterBufferIndex++];
//  }

  // if we're in a repeated start, then we've already sent the START
  // in the ISR. Don't do it again.
  //
  if (true == twi_inRepStart) {
    // if we're in the repeated start state, then we've already sent the start,
    // (@@@ we hope), and the TWI statemachine is just waiting for the address byte.
    // We need to remove ourselves from the repeated start state before we enable interrupts,
    // since the ISR is ASYNC, and we could get confused if we hit the ISR before cleaning
    // up. Also, don't enable the START interrupt. There may be one pending from the 
    // repeated start that we sent outselves, and that would really confuse things.
    twi_inRepStart = false;			// remember, we're dealing with an ASYNC ISR
    //TWDR = twi_slarw;				
//    TWCR = _BV(TWINT) | _BV(TWEA) | _BV(TWEN) | _BV(TWIE);	// enable INTs, but not START
    //I2caRegs.I2CIER.bit.XRDY = 1; //Enable transmit interrupt
    if(sendStop)
	  I2caRegs.I2CMDR.all = 0x6E20; //send start and stop
    else
      I2caRegs.I2CMDR.all = 0x6620; //send start no stop

//    while(twi_masterBufferIndex < twi_masterBufferLength){
//        //wait for transmit register to be ready
//        while(I2caRegs.I2CSTR.bit.XRDY == 0);
//        // copy data to output register a
//        I2caRegs.I2CDXR = twi_masterBuffer[twi_masterBufferIndex++];
//    }
  }
  else{
	// send start condition
//    TWCR = _BV(TWINT) | _BV(TWEA) | _BV(TWEN) | _BV(TWIE) | _BV(TWSTA);	// enable INTs
	  //I2caRegs.I2CIER.bit.XRDY = 1; //Enable transmit interrupt
      if(sendStop)
	    I2caRegs.I2CMDR.all = 0x6E20; //send start and stop
      else
        I2caRegs.I2CMDR.all = 0x6620; //send start no stop
//      while(twi_masterBufferIndex < twi_masterBufferLength){
//        //wait for transmit register to be ready
//        while(I2caRegs.I2CSTR.bit.XRDY == 0);
//        // copy data to output register a
//        I2caRegs.I2CDXR = twi_masterBuffer[twi_masterBufferIndex++];
//    }
  }


  // wait for write operation to complete
  while(wait && (TWI_MTX == twi_state)){
    continue;
  }



  //Check if an error occured
  if(I2caRegs.I2CSTR.all & 0x0003)
      return 1;
  else{
      twi_state = TWI_READY;
      return 0;
  }

//  if (twi_error == 0xFF)
//    return 0;	// success
//  else if (twi_error == I2C_ARB_LOST_ERROR)
//    return 2;	// error: address send, nack received
//  else if (twi_error == I2C_NACK_ERROR)
//    return 3;	// error: data send, nack received
//  else
//    return 4;	// other twi error
}

void twi_stop(void)
{
  // send stop condition
//  TWCR = _BV(TWEN) | _BV(TWIE) | _BV(TWEA) | _BV(TWINT) | _BV(TWSTO);
	I2caRegs.I2CMDR.bit.STP = 1;


    I2caRegs.I2CIER.bit.XRDY = 0; //Disable transmit interrupt

  // wait for stop condition to be exectued on bus
  // TWINT is not set after a stop condition!
//  while(TWCR & _BV(TWSTO)){
//    continue;
//  }
	while(I2caRegs.I2CMDR.bit.STP == 1){
		continue;
	}

  // update twi state
  twi_state = TWI_READY;
}
